# substreams-abis

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  RELEASE_NOTES.md  build.rs  cli.ts  package-lock.json  package.json  rust-toolchain.toml  token-registry.json  tsconfig.json
.agents/skills/: README.md  abi-naming.md  add-abi.md  build-and-test.md  pr-workflow.md
.copilot/: skills.md
.github/workflows/: ci.yml  publish.yml
abi/erc20-tokens/: ACRED.sol  ANKR.sol  AUSD.json  AVUSD.json  AXL.json  BAT.sol  BEAM.sol  BLENDR.json  BLUR.json  CRV.json  ENA.json  EUL.json  EURC.sol  FRXUSD.json  GMX.sol  GUN.sol  JAAA.sol  JASMY.json  JTRSY.json  KITE.sol  LINK.sol  MOG.sol  ONDO.json  PEPE.sol  REKT.sol  RENDER.json  RPL.json  SPELL.sol  SUSHI.sol  TUSD.json  TUSD.sol  UMA.sol  WLD.json  WOO.sol  YUSD.json  ZCHF.sol
abi/evm/: dca_dot_fun.json
abi/standard/: ERC2981.json
abi/token/: ERC1155.json  ERC4626.json
abi/tvm/: README.md
docs/: repo-navigation.md
idl/solana/: README.md
lib/: build-registry.ts  chains.ts  fetch-all-tokens.ts  fetch-token.ts  filter-standard.ts  index.ts  keccak.ts  update-modules.ts
scripts/: build-registry.js  fetch-all-tokens.sh  fetch-token.sh  filter-standard.sh  keccak.js  package-lock.json  token-registry.json  update-modules.sh
src/: dca_dot_fun.rs  lib.rs  seaport.rs
src/bridge/: mod.rs
src/dex/: mod.rs
src/erc20_tokens/: aeweth.rs  ankr.rs  ausd.rs  avusd.rs  bat.rs  beam.rs  blendr.rs  blur.rs  bonk.rs  brett.rs  buidl.rs  comp.rs  crv.rs  cryptopunks.rs  dai.rs  degen.rs  dep.rs  ena.rs  eul.rs  eurc.rs  fet.rs  frax.rs  gho.rs  (+34 more)
tests/: curvefi.rs  ens.rs  evm.rs  seaport.rs  sunpump.rs  sunswap.rs  uniswap-v2.rs  uniswap.rs
tools/codegen/: Cargo.toml
tools/codegen/src/: main.rs
(+443 files in other folders)
