[package]
name = "substreams-abis"
version = "0.7.17"
description = "Substreams ABIs"
license = "MIT"
edition = "2021"
authors = ["Denis <denis@pinax.network>"]

[lib]
crate-type = ["rlib"]

[dependencies]
ethabi = "18.0"
substreams = "0.7.0"
substreams-ethereum = "0.11.1"
num-bigint = "0.4"

[build-dependencies]
prost-build = "0.14.1"
anyhow = "1"
substreams-ethereum = "0.11"
walkdir = "2"
