[package]
name = "substreams-abis"
version = "1.1.0"
description = "Substreams ABIs"
license = "MIT"
edition = "2021"
authors = ["Denis <denis@pinax.network>"]
repository = "https://github.com/pinax-network/substreams-abis"
documentation = "https://docs.rs/substreams-abis"
homepage = "https://github.com/pinax-network/substreams-abis"

[lib]
crate-type = ["rlib"]
doctest = false

[dependencies]
ethabi = "17.2.0"
substreams = "0.7.6"
substreams-ethereum = "0.11.1"
num-bigint = "0.4"
