[package]
name = "substreams-abis-codegen"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "codegen"
path = "src/main.rs"

[dependencies]
anyhow = "1"
ethabi = "17.2.0"
heck = "0.4.1"
prettyplease = "0.2.37"
proc-macro2 = "1.0.106"
quote = "1.0.44"
substreams-ethereum = "0.11.1"
syn = "2.0.116"
walkdir = "2"
